--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -4,7 +4,7 @@
             <img src="images/tpml_logo.png" alt=""><span>北市圖主題網<br>網站管理平台</span>
         </a>
     </h1>
-    <a href="#AL" title="左方導覽區塊" accesskey="L" class="accesskey">:::</a>
+    <a href="#aL" id="aL" title="左方導覽區塊" accesskey="L" class="accesskey">:::</a>
     <!-- menu -->
     <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
