--- a/tpml_index.htm
+++ b/tpml_index.htm
@@ -26,6 +26,7 @@
         <aside></aside>
         <!-- 主要內容區 -->
         <div class="content">
+            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="中央內容區塊">:::</a>
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
