--- a/index_list.html
+++ b/index_list.html
@@ -523,6 +523,31 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>(視障網)無障礙導盲磚</td>
+                        <td>
+                            導盲磚範例頁面 <a href="tpmlblind_data_list.htm" target="_blank"></a>
+                            <ol>
+                                <li>(共用區)header內 的 div class="container" 下方 加上 
+                                    <a href="#aU" id="aU" accesskey="U" title="上方功能區塊" tabindex="2">:::</a>
+                                </li>
+                                <li>(共用區)aside內 的 h1 下方 加上 
+                                    <a href="#aL" id="aL" title="左方導覽區塊" accesskey="L" tabindex="1">:::</a>
+                                </li>
+                                <li>div class="wrapper" 內 的 div class="content" 下方 加上 
+                                    <a href="#aC" id="aC" accesskey="C" title="中央內容區塊" tabindex="3">:::</a>
+                                </li>
+                                <li>主content 區若有切左右區塊，左邊的 div class="col" 下方 加 
+                                    <a href="#aM" id="aM" accesskey="M" title="目錄樹選單區塊">:::</a>
+                                </li>
+                                <li>右邊的 div class="content_block" 下方 加 
+                                    <a href="#aR" id="aR" accesskey="R" title="資料內容區塊">:::</a>
+                                </li>
+                            </ol>
+                            <p>功能頁面：資料管理／資料上稿；客製化管理／視障會員、留言板、博士通問答、博士通答題</p>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
