--- a/tpmlblind_data_list.htm
+++ b/tpmlblind_data_list.htm
@@ -26,7 +26,7 @@
         <aside></aside>
         <!-- 主要內容區 -->
         <div class="content">
-            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="中央內容區塊">:::</a>
+            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="中央內容區塊" tabindex="3">:::</a>
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
@@ -279,7 +279,7 @@
                                 </div>
                             </div>
                             <div class="content_block">
-                                <a class="accesskey" href="#aR" id="aR" accesskey="R" title="目錄樹選單區塊">:::</a>
+                                <a class="accesskey" href="#aR" id="aR" accesskey="R" title="資料內容區塊">:::</a>
                                 <div class="_head">
                                     <h3>文章列表</h3>
                                 </div>
