--- a/tpmlblind_memberlist.htm
+++ b/tpmlblind_memberlist.htm
@@ -27,7 +27,7 @@
         <aside></aside>
         <!-- 主要內容區 -->
         <div class="content">
-            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="中央內容區塊">:::</a>
+            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="中央內容區塊" tabindex="3">:::</a>
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
