--- a/sysQA_answerAdd.htm
+++ b/sysQA_answerAdd.htm
@@ -141,31 +141,31 @@
 												<input type="text" name="usr_name" id="usr_name"/>
                                             </div>									
                                         </div>									
-                                         <div class="form_grp">
+                                         <div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">借閱證號<abbr>*</abbr></div>
                                             <div class="form_content">
 												<input type="text" name="usr_id" id="usr_id"/>
                                             </div>									
                                         </div>		                                        
-										<div class="form_grp">
+										<div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">Email</div>
                                             <div class="form_content">
 												<input type="text" name="usr_email" id="usr_email"/>
                                             </div>									
                                         </div>		                                        
-										<div class="form_grp">
+										<div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">電話<abbr>*</abbr></div>
                                             <div class="form_content">
 												<input type="text" name="usr_tel" id="usr_tel"/>
                                             </div>									
                                         </div>		                                        
-										<div class="form_grp">
+										<div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">學校</div>
                                             <div class="form_content">
 												<input type="text" name="usr_school" id="usr_school"/>
                                             </div>									
                                         </div>		                                        
-										<div class="form_grp">
+										<div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">班級</div>
                                             <div class="form_content inline">
 												<input type="text" name="usr_class" id="usr_class"/> 年 <input type="text" name="usr_class_name" id="usr_class_name"/> 班
