--- a/sysQA_answerAdd.htm
+++ b/sysQA_answerAdd.htm
@@ -145,7 +145,7 @@
                                         <div class="form_grp">
 											<div class="form_title">驗證<abbr>*</abbr></div>
                                             <div class="form_content">
-												<input type="text" name="vertify_id" id="vertify_id" placeholder="請輸入身分證號或閱讀證號驗證"/>
+												<input type="text" name="vertify_id" id="vertify_id" placeholder="請輸入身分證號或閱讀證號驗證" style="display:inline;width:65%;"/>
                                                 <input type="button" value="驗證"  class="btn btn-submit used" onclick="myFunction()"/>
                                             </div>									
                                         </div>		                                        
@@ -182,8 +182,8 @@
 										<div class="form_grp" style="margin-top: 20px;">
 											<div class="form_title">班級</div>
                                             <div class="form_content inline">
-												<input type="text" name="usr_class" id="usr_class"/> 年
-                                                <input type="text" name="usr_class_name" id="usr_class_name"/> 班
+												<input type="text" name="usr_class" id="usr_class" style="display:inline;width:25%;"/> 年
+                                                <input type="text" name="usr_class_name" id="usr_class_name" style="display:inline;width:25%;"/> 班
                                             </div>									
                                         </div>	
                                         
