--- a/sysQA_pointUseList.htm
+++ b/sysQA_pointUseList.htm
@@ -94,8 +94,8 @@
                                                 <tr>
                                                     <td align="center">A13061830601</td>
                                                     <td align="center">取消兌換</td>
-                                                    <td align="center">10</td>
-													<td>兌換 圖書禮券</td>
+                                                    <td align="center">0</td>
+													<td>兌換 圖書禮券10元</td>
                                                     <td>臨櫃</td>                                                
 													<td>劉佳淇(總館，admin) 於 2016/12/27 下午 01:01:50 取消兌換</td>
                                                     <td align="center"></td>			
@@ -104,7 +104,7 @@
                                                     <td align="center">A13061830601</td>
                                                     <td align="center">兌換成功</td>
                                                     <td align="center">10</td>
-													<td>兌換 yyy</td>
+													<td>兌換 圖書禮券10元</td>
                                                     <td>臨櫃</td>                                                
 													<td align="center">
                                                         劉佳淇(總館，admin) 於 2016/12/27 下午 01:01:50 兌換
