--- a/sysQA_pointUseList.htm
+++ b/sysQA_pointUseList.htm
@@ -17,6 +17,7 @@
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
+    <link rel="stylesheet" href="css/customize.css">
 </head>
 
 <body>
@@ -88,7 +89,7 @@
                                                     <td align="center">10</td>
 													<td>兌換 xxx</td>
                                                     <td>線上</td>
-													<td align="center"></td>
+													<td align="center">child 於 2016/12/27 下午 01:01:50 兌換</td>
                                                     <td align="center"></td>													
                                                 </tr>
                                                 <tr>
@@ -107,7 +108,7 @@
 													<td>兌換 圖書禮券10元</td>
                                                     <td>臨櫃</td>                                                
 													<td align="center">
-                                                        劉佳淇(總館，admin) 於 2016/12/27 下午 01:01:50 兌換
+                                                        劉佳淇(總館，admin) 於 2016/12/27 上午 11:01:50 兌換
 													</td>
                                                     <td align="center">
                                                         <div class="btn_grp">
